Estilos de Administrador COmpletados

--- a/act_Application/Views/ActAportaciones/Edit.cshtml
+++ b/act_Application/Views/ActAportaciones/Edit.cshtml
@@ -1,52 +1,57 @@
 ﻿@model act_Application.Models.ActAportacione
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar Aportes";
 }
 
-<h1>Edit</h1>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/formularioEdicion.css" />
+</head>
+<div class="content-text">
+    <h1>Editar Aportes</h1>
 
-<h4>ActAportacione</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="Valor" class="control-label"></label>
-                <input asp-for="Valor" class="form-control" />
-                <span asp-validation-for="Valor" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="IdUser" class="control-label"></label>
-                <input asp-for="IdUser" class="form-control" />
-                <span asp-validation-for="IdUser" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FechaAportacion" class="control-label"></label>
-                <input asp-for="FechaAportacion" class="form-control" />
-                <span asp-validation-for="FechaAportacion" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Aprobacion" class="control-label"></label>
-                <input asp-for="Aprobacion" class="form-control" />
-                <span asp-validation-for="Aprobacion" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CapturaPantalla" class="control-label"></label>
-                <input asp-for="CapturaPantalla" class="form-control" />
-                <span asp-validation-for="CapturaPantalla" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+    <h4>ActAportacione</h4>
+    <hr />
+    <div class="row">
+        <div class="col-md-4">
+            <form asp-action="Edit">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="Id" />
+                <div class="form-group">
+                    <label asp-for="Valor" class="control-label">Valor</label>
+                    <input asp-for="Valor" class="form-control" />
+                    <span asp-validation-for="Valor" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="IdUser" class="control-label">Id del Usuario</label>
+                    <input asp-for="IdUser" class="form-control" />
+                    <span asp-validation-for="IdUser" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="FechaAportacion" class="control-label">Fecha de Aporte</label>
+                    <input asp-for="FechaAportacion" class="form-control" />
+                    <span asp-validation-for="FechaAportacion" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Aprobacion" class="control-label">Aprobacion</label>
+                    <input asp-for="Aprobacion" class="form-control" />
+                    <span asp-validation-for="Aprobacion" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="CapturaPantalla" class="control-label">Captura de Pantalla</label>
+                    <input asp-for="CapturaPantalla" class="form-control" />
+                    <span asp-validation-for="CapturaPantalla" class="text-danger"></span>
+                </div>
+                <div class="btn-container">
+                    <input type="submit" value="Guardar" class="btn" />
+                    <a class="btn-return" asp-action="Index">Regresar</a>
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
