--- a/act_Application/Views/ActAportaciones/Delete.cshtml
+++ b/act_Application/Views/ActAportaciones/Delete.cshtml
@@ -1,51 +1,44 @@
 ﻿@model act_Application.Models.ActAportacione
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Eliminar Aportaciones";
 }
-
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>ActAportacione</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Valor)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Valor)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdUser)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdUser)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaAportacion)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FechaAportacion)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Aprobacion)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Aprobacion)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CapturaPantalla)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CapturaPantalla)
-        </dd>
-    </dl>
-    
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/eliminar.css" />
+</head>
+<h1>Eliminar Aportaciones</h1>
+<hr />
+<div class="container">
+    <table>
+        <tr>
+            <td class="titulo">Razon</td>
+            <td class="texto">@Html.DisplayFor(model => model.Valor)</td>
+        </tr>
+        <tr>
+            <td class="titulo">Razon</td>
+            <td class="texto">@Html.DisplayFor(model => model.IdUser)</td>
+        </tr>
+        <tr>
+            <td class="titulo">Id del Usuario</td>
+            <td class="texto">@Html.DisplayFor(model => model.FechaAportacion)</td>
+        </tr>
+        <tr>
+            <td class="titulo">Id del Usuario</td>
+            <td class="texto">@Html.DisplayFor(model => model.Aprobacion)</td>
+        </tr>
+        <tr>
+            <td class="titulo">Id del Usuario</td>
+            <td class="texto">@Html.DisplayFor(model => model.CapturaPantalla)</td>
+        </tr>
+    </table>
+</div>
+<div class="btn-container">
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Eliminar" class="btn-delite" />
+        <a class="btn-return" asp-action="Index">Regresar</a>
     </form>
 </div>
+    
