--- a/act_Application/Views/ActRolUsers/Delete.cshtml
+++ b/act_Application/Views/ActRolUsers/Delete.cshtml
@@ -3,31 +3,31 @@
 @{
     ViewData["Title"] = "Delete";
 }
-
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>ActRolUser</h4>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/eliminar.css" />
+</head>
+<div class="content-text">
+    <h1>Eliminar Roles de Usuario</h1>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdUser)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdUser)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdRol)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdRol)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+    <div class="container">
+        <table>
+            <tr>
+                <td class="titulo">Id del usuario</td>
+                <td class="texto"> @Html.DisplayFor(model => model.IdUser)</td>
+            </tr>
+            <tr>
+                <td class="titulo">Id del Rol</td>
+                <td class="texto">@Html.DisplayFor(model => model.IdRol)</td>
+            </tr>
+        </table>
+    </div>
+    <div class="btn-container">
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="Id" />
+            <input type="submit" value="Eliminar" class="btn-delete" />
+            <a class="btn-return" asp-action="Index">Regresar</a>
+        </form>
+    </div>
 </div>
