--- a/act_Application/Views/ActRols/Delete.cshtml
+++ b/act_Application/Views/ActRols/Delete.cshtml
@@ -1,33 +1,36 @@
 ﻿@model act_Application.Models.ActRol
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Eliminar Rol";
 }
-
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>ActRol</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NombreRol)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.NombreRol)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DescripcionRol)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DescripcionRol)
-        </dd>
-    </dl>
-    
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/eliminar.css" />
+</head>
+<h1>Eliminar Rol</h1>
+<hr />
+<div class="container">
+    <table>
+        <tr>
+            <td class="titulo">Razon</td>
+            <td class="texto">@Html.DisplayFor(model => model.Id)</td>
+        </tr>
+        <tr>
+            <td class="titulo">Razon</td>
+            <td class="texto">@Html.DisplayFor(model => model.NombreRol)</td>
+        </tr>
+        <tr>
+            <td class="titulo">Id del Usuario</td>
+            <td class="texto">@Html.DisplayFor(model => model.DescripcionRol)</td>
+        </tr>
+    </table>
+</div>
+<div class="btn-container">
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Eliminar" class="btn-delite" />
+        <a class="btn-return" asp-action="Index">Regresar</a>
     </form>
 </div>
+
