--- a/act_Application/Views/ActTransacciones/Create.cshtml
+++ b/act_Application/Views/ActTransacciones/Create.cshtml
@@ -1,36 +1,38 @@
 ﻿@model act_Application.Models.ActTransaccione
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Crear Transacciones";
 }
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/formularioEdicion.css" />
+</head>
 
-<h1>Create</h1>
-
-<h4>ActTransaccione</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Razon" class="control-label"></label>
-                <input asp-for="Razon" class="form-control" />
-                <span asp-validation-for="Razon" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="IdUser" class="control-label"></label>
-                <input asp-for="IdUser" class="form-control" />
-                <span asp-validation-for="IdUser" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+<div class="content-text">
+    <h1>Crear Registro de Transaccione</h1>
+    <hr />
+    <div class="row">
+        <div class="col-md-4">
+            <form asp-action="Create">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Razon" class="control-label">Razon</label>
+                    <input asp-for="Razon" class="form-control" />
+                    <span asp-validation-for="Razon" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="IdUser" class="control-label">Id del Usuario</label>
+                    <input asp-for="IdUser" class="form-control" />
+                    <span asp-validation-for="IdUser" class="text-danger"></span>
+                </div>
+                <div class="btn-container">
+                    <input class="btn" type="submit" value="Crear" />
+                    <a class="btn-return" asp-action="Index">Regresar</a>
+                </div>
+            </form>
+        </div>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
