--- a/act_Application/Views/ActTransacciones/Delete.cshtml
+++ b/act_Application/Views/ActTransacciones/Delete.cshtml
@@ -1,33 +1,33 @@
 ﻿@model act_Application.Models.ActTransaccione
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Eliminar Transacciones";
 }
-
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>ActTransaccione</h4>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/eliminar.css" />
+</head>
+<div class="content-text">
+    <h1>Eliminar Transacciones</h1>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Razon)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Razon)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdUser)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdUser)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+    <div class="container">
+        <table>
+            <tr>
+                <td class="titulo">Razon</td>
+                <td class="texto">@Html.DisplayFor(model => model.Razon)</td>
+            </tr>
+            <tr>
+                <td class="titulo">Id del Usuario</td>
+                <td class="texto">@Html.DisplayFor(model => model.IdUser)</td>
+            </tr>
+        </table>
+    </div>
+    <div class="btn-container">
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="Id" />
+            <input type="submit" value="Eliminar" class="btn-delite" /> |
+            <a class="btn-return" asp-action="Index">Regresar</a>
+        </form>
+    </div>
 </div>
