--- a/act_Application/Views/ActUsers/Delete.cshtml
+++ b/act_Application/Views/ActUsers/Delete.cshtml
@@ -1,69 +1,55 @@
 ﻿@model act_Application.Models.ActUser
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Eliminar Usuario";
 }
-
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>ActUser</h4>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/eliminar.css" />
+</head>
+<div class="content-text">
+    <h1>Eliminar Usuario</h1>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Cedula)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Cedula)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Cbancaria)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Cbancaria)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Correo)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Correo)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NombreYapellido)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.NombreYapellido)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Celular)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Celular)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Contrasena)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Contrasena)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TipoUser)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TipoUser)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Ncaccionario)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Ncaccionario)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+    <div class="container">
+        <table>
+            <tr>
+                <td class="titulo">Cedula</td>
+                <td class="texto">@Html.DisplayFor(model => model.Cedula)</td>
+            </tr>
+            <tr>
+                <td class="titulo">Nombre y Apellido</td>
+                <td class="texto">@Html.DisplayFor(model => model.NombreYapellido)</td>
+            </tr>
+            <tr>
+                <td class="titulo">Correo Electronico</td>
+                <td class="texto">@Html.DisplayFor(model => model.Correo)</td>
+            </tr>
+            <tr>
+                <td class="titulo">Tipo de Usuario</td>
+                <td class="texto">@Html.DisplayFor(model => model.TipoUser)</td>
+            </tr>
+            <tr>
+                <td class="titulo">Celular</td>
+                <td class="texto">@Html.DisplayFor(model => model.Celular)</td>
+            </tr>
+                        <tr>
+                <td class="titulo">Cedula de su Accionista</td>
+                <td class="texto">@Html.DisplayFor(model => model.Ncaccionario)</td>
+            </tr>
+                        <tr>
+                <td class="titulo">Cuenta Bancaria</td>
+                <td class="texto"> @Html.DisplayFor(model => model.Cbancaria)</td>
+            </tr>
+
+        </table>
+    </div>
+    <div class="btn-container">
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="Id" />
+            <input class="btn-delete" type="submit" value="Eliminar" />
+            <a class="btn-return" asp-action="Index">Regresar</a>
+        </form>
+    </div>
 </div>
+
