--- a/act_Application/Views/ActUsers/Edit.cshtml
+++ b/act_Application/Views/ActUsers/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model act_Application.Models.ActUser
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar Usuarios";
 }
 <head>
     <meta charset="utf-8" />
