Tabla de Aportaciones (bases de diseño y logica de programacion)

--- a/act_Application/Views/ActUsers/Index.cshtml
+++ b/act_Application/Views/ActUsers/Index.cshtml
@@ -72,7 +72,14 @@
                         @Html.DisplayFor(modelItem => item.TipoUser)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Ncaccionario)
+                        @if (item.Ncaccionario == 0)
+                        {
+                            <text>(No posee invitado)</text>
+                        }
+                        else
+                        {
+                            @Html.DisplayFor(modelItem => item.Ncaccionario)
+                        }
                     </td>
                     <td>
                         <a class="button edit" asp-action="Edit" asp-route-id="@item.Id">Editar</a>
