--- a/act_Application/Views/Shared/_Layout.cshtml
+++ b/act_Application/Views/Shared/_Layout.cshtml
@@ -98,7 +98,7 @@
                     </li>
 
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="~/TablaAportaciones/Index">
                             <i class='bx bx-table icon'></i>
                             <span class="text nav-text">Tabla de Aportacion</span>
                         </a>
