Modificacion en Tablas y Vistas

--- a/act_Application/Views/ActAportaciones/Delete.cshtml
+++ b/act_Application/Views/ActAportaciones/Delete.cshtml
@@ -14,10 +14,14 @@
     <table>
         <tr>
             <td class="titulo">Razon</td>
+            <td class="texto">@Html.DisplayFor(model => model.Razon)</td>
+        </tr>
+        <tr>
+            <td class="titulo">Valor</td>
             <td class="texto">@Html.DisplayFor(model => model.Valor)</td>
         </tr>
         <tr>
-            <td class="titulo">Razon</td>
+            <td class="titulo">Id del Usaurio</td>
             <td class="texto">@Html.DisplayFor(model => model.IdUser)</td>
         </tr>
         <tr>
