--- a/act_Application/Views/ActUsers/Delete.cshtml
+++ b/act_Application/Views/ActUsers/Delete.cshtml
@@ -35,11 +35,15 @@
             </tr>
                         <tr>
                 <td class="titulo">Cedula de su Accionista</td>
-                <td class="texto">@Html.DisplayFor(model => model.Ncaccionario)</td>
+                <td class="texto">@Html.DisplayFor(model => model.IdSocio)</td>
             </tr>
-                        <tr>
+            <tr>
                 <td class="titulo">Cuenta Bancaria</td>
                 <td class="texto"> @Html.DisplayFor(model => model.Cbancaria)</td>
+            </tr>
+            <tr>
+                <td class="titulo">Nombre del Bancaria</td>
+                <td class="texto"> @Html.DisplayFor(model => model.Nbanco)</td>
             </tr>
 
         </table>
