--- a/act_Application/Views/ActAportaciones/Create.cshtml
+++ b/act_Application/Views/ActAportaciones/Create.cshtml
@@ -18,6 +18,11 @@
             <form asp-action="Create">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
+                    <label asp-for="Razon" class="control-label">Razon</label>
+                    <input asp-for="Razon" class="form-control" />
+                    <span asp-validation-for="Razon" class="text-danger"></span>
+                </div>
+                <div class="form-group">
                     <label asp-for="Valor" class="control-label">Valor</label>
                     <input asp-for="Valor" class="form-control" />
                     <span asp-validation-for="Valor" class="text-danger"></span>
